# BbRest

./: .gitignore  LICENSE  Pipfile  README.md  bbrest.py  ent_map.json  functions.p  permissions.py  pyproject.toml  requirements.txt  setup.py
bbrest/: bbrest.py
