[tool.poetry]
name = "bbrest"
version = "0.1.0"
description = ""
authors = ["Matt Deakyne <m.d@ku.edu>"]

[tool.poetry.dependencies]
python = "^3.7"
maya = "*"
requests = "*"
aiohttp = "*"

[tool.poetry.dev-dependencies]
jupyterlab = "*"
ipython = "^7.2"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
