[tool.poetry]
name = "bbrest"
version = "0.4.7"
description = "Blackboard REST API for Humans"
authors = ["Matt Deakyne <m.d@ku.edu>"]
readme = 'README.md'
include = ["ent_map.json"]


[tool.poetry.dependencies]
python = "^3.6"
maya = "*"
requests = "*"
aiohttp = "*"
requests-html = "^0.10.0"
selenium = "*"

[tool.poetry.dev-dependencies]
jupyterlab = "*"
ipython = "^7.16"
requests-oauthlib = "^1.2"
splinter = "*"
ipyauth = "^0.2.6"
black = "^19.10b0"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
